--- a/vistas/navbar-usuario.html
+++ b/vistas/navbar-usuario.html
@@ -1,7 +1,7 @@
 <div class="navbar-fixed">
 		<nav>
 			<div class="nav-wrapper">
-				<a href="#!" class="brand-logo"><img id="logo" src="../img/logo.png"><span>PROMOS</span></a>
+				<a href="index.html" class="brand-logo"><img id="logo" src="../img/logo.png"><span>PROMOS</span></a>
 				<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 				<ul class="right hide-on-med-and-down">
 				  	<li ng-click="searchToggle()" id="search-icon"><a href="#"><i class="material-icons">search</i></a></li>
