--- a/vistas/verProducto.html
+++ b/vistas/verProducto.html
@@ -56,10 +56,11 @@
                 <div class="col s12 m6"><h3 class="titulo">{{descuento.titulo}}</h3></div>
 
                 <!--Descuento-->
-                <div class="col s12 m6"><h3 class="descuento">-{{descuento.descuento}}%</h3></div>
+                <div id="descuento" data-descuento="{{descuento.descuento}}" class="col s12 m6"><h3 class="descuento">-{{descuento.descuento}}%</h3></div>
                 <!--Botón para abrir el pop up-->
                 <div class="col s12">
-                  <a class="waves-effect waves-light button-obtener waves-effect waves-light btn cd-popup-trigger" ng-click="onClickBotonObtener()"><i class="material-icons right agendar">event</i>Obtener</a>
+                  <a ng-hide="descuentoObtenido()" class="waves-effect waves-light button-obtener waves-effect waves-light btn cd-popup-trigger" ng-click="onClickBotonObtener()"><i class="material-icons right agendar">event</i>Obtener</a>
+                  <a ng-show="descuentoObtenido()" class="waves-effect waves-light button-obtener backgroung-green waves-effect waves-light btn cd-popup-trigger" disabled><i class="material-icons right agendar">done</i>Obtenido</a>
                 </div>
               </div>
               <!--Descripción del producto o servicio-->
@@ -110,8 +111,8 @@
                     <a ng-click="closePopUp()" class="cd-popup-close img-replace">Close</a>
                     <ul class="cd-buttons row">
                       <li><a ng-click="closePopUp()" class="btnCancAcept col s6">Cancelar</a></li>
-                      <li><a id="obtener" class="btn btn-default col s6">Obtener</a></li>
-                      <li><a id="aceptar" style="display: none" class="btnCancAcept col s6">Aceptar</a></li>
+                      <li><a id="obtener" ng-click="obtenerDescuentoOnClick()" class="btn btn-default col s6">Obtener</a></li>
+                      <li><a id="aceptar" ng-click="obtenerDescuentoOnClick()" style="display: none" class="btnCancAcept col s6">Aceptar</a></li>
                     </ul>
                   </div> <!-- cd-popup -->
 
