--- a/vistas/busca.html
+++ b/vistas/busca.html
@@ -44,10 +44,10 @@
 
 	<!-- EMPIEZA LOS DESCUENTOS -->
 	<div class="container-fluid">
-		<div id="cards-container" class="row col m12">
+		<div id="cards-container" class="row">
 			
 			<!-- Comienxo Poductos -->
-			<section class="col s12" id="productos">
+			<section id="productos">
 				<h4>Resultados para: {{q}}</h4>
 
 					<!-- Se repite las targetas de descuentos con ng-repeat y se filtran-->
