--- a/vistas/navbar-usuario.html
+++ b/vistas/navbar-usuario.html
@@ -4,7 +4,8 @@
 				<a href="index.html" class="brand-logo"><img id="logo" src="../img/logo.png"><span>PROMOS</span></a>
 				<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 				<ul class="right hide-on-med-and-down">
-				  	<li ng-click="searchToggle()" id="search-icon"><a href="#"><i class="material-icons">search</i></a></li>
+					<li ng-click="searchToggle()" id="search-icon"><a href="#"><i class="material-icons">search</i></a></li>
+					<li><a ng-click="carritoCompras()"><i class="material-icons">shopping_cart</i></a></li>
 					<li><a href="#"><i class="material-icons left">person</i>{{nombre}}</a></li>
 					<li><a ng-click="logOut()">Salir</a></li>
 				</ul>
