--- a/vistas/registrarse.html
+++ b/vistas/registrarse.html
@@ -19,7 +19,7 @@
     <!-- Controlador -->
     <script type="text/javascript" src="../js/registrarse-controlador.js"></script>
 </head>
-<body ng-controller="registrarse-controlador as ctrl">
+<body ng-controller="registrarse as ctrl">
 	<div class="navbar-fixed">
 		<nav>
 			<div class="nav-wrapper">
